--- a/languages/woostify.pot
+++ b/languages/woostify.pot
@@ -6,7 +6,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2024-04-19 02:18+0000\n"
+"POT-Creation-Date: 2024-08-13 07:51+0000\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;_e;_ex:1,2c;_n:1,2;_n_noop:1,2;_nx:1,2,4c;_nx_noop:1,2,3c;_x:1,2c;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
 "X-Poedit-SearchPath-0: .\n"
@@ -1250,6 +1250,14 @@ msgstr ""
 msgid "Reviews (%d)"
 msgstr ""
 
+#. translators: 1: first result 2: last result 3: total results
+#: woocommerce/loop/result-count.php:36
+msgctxt "with first and last result"
+msgid "Showing %1$d&ndash;<span class=\"result-end\">%2$d</span> of %3$d result"
+msgid_plural "Showing %1$d&ndash;<span class=\"result-end\">%2$d</span> of %3$d results"
+msgstr[0] ""
+msgstr[1] ""
+
 #: inc/compatibility/elementor/class-woostify-elementor-single-product-images.php:40
 msgid "Woostify - Default Product Images"
 msgstr ""
@@ -2480,14 +2488,4 @@ msgstr ""
 
 #: inc/customizer/sections/wordpress/title-tagline.php:109
 msgid "Logo Width"
-msgstr ""
-msgstr ""
-
-#: woocommerce/loop/result-count.php:36
-msgid "Showing %1$d&ndash;<span class="result-end">%2$d</span> of %3$d result"
-msgstr ""
-msgstr ""
-
-#: woocommerce/loop/result-count.php:36
-msgid "Showing %1$d&ndash;<span class="result-end">%2$d</span> of %3$d results"
 msgstr ""
